static/css/custom.css
html,
body {
    width: 100%;
    height: 100%;
    margin: 0px;
    padding: 0px;
    overflow-x: hidden;
}

.add-set-input {
    margin: 2px;
}

#add-workout-button {
    width: 50%;
    max-width: 280px;
    margin: 5px 0 10px 0;
}

.btn:focus {
    outline: none !important;
}

.bootstrap-select.form-control:not([class*=col-]) {
    width: 100px;
}

.bootstrap-select.btn-group .btn {
    padding: 8px 12px 8px 25px;
    height: 38px;
}

.bootstrap-select.btn-group .btn .caret {
    left: 12px;
}

.bootstrap-select.btn-group .btn .filter-option {
    text-align: right;
}

.close {
    color: #ffffff;
    text-shadow: 0 1px 0 #000000;
    outline: none !important;
}

.close span {
    padding: 0 4px;
}

#confirm-delete-modal * {
    max-width: 350px;
}

#confirm-delete-modal p {
    padding: 0 20px;
}

.container-fluid>.navbar-collapse {
    margin-right: -15px;
    margin-left: -15px;
}

#content-window {
    position: relative;
}

#exercise-input-container .dropdown-menu.open {
    border: 1px solid black;
    overflow-x: scroll;
    max-width: 100%;
}

.error-text {
    color: #fc6a6a;
}

#exercise-name-input,
#weight-or-dist-input,
#reps-or-time-input {
    margin: 2px;
}

.exercise-container {
    overflow: auto;
}

.exercise-name-section {
    padding: 0 5px;
}

#exercise-input-container .bootstrap-select {
    width: 85% !important;
}

#exercise-input-container .bootstrap-select.btn-group .dropdown-menu li:first-child {
    display: none;
}

#exercise-input-container .bootstrap-select.btn-group .btn .filter-option {
    padding-left: 5px;
    text-align: left;
}

.fading-popup-message {
    display: none;
    width: 60%;
    text-align: center;
    position: absolute;
    z-index: 10;
    left: 50%;
    top: 10px;
    -ms-transform: translateX(-50%);
    -webkit-transform: translateX(-50%);
    transform: translateX(-50%);
}

.form-control {
    margin: auto;
    width: 85%;
    margin-top: 5px;
    margin-bottom: 5px;
}

.glyphicon-user {
    padding-right: 5px;
}

.inline-element {
    display: inline-block;
}

.login-page-button {
    margin: 5px;
    width: 25%;
}

#logout-button {
    cursor: pointer;
}

#login-window > h1 {
    margin-bottom: 5px;
}

#login-window div {
    padding: 0;
}

#login-window,
#register-window {
    width: 800px;
    max-width: 100%;
    margin: auto;
    text-align: center;
}

.login-register-info-text {
    margin-bottom: 5px;
    display: none;
    width: 90%;
    margin: auto;
}

.modal {
    width: auto;
    margin: auto;
}

.modal-dialog {
    position: relative;
    top: 20px;
}

.modal-header,
.modal-body,
.modal-footer {
    border: none;
    padding: 5px;
}

.modal-header h3 {
    margin: 5px 20px;
}

.modal-footer {
    margin-bottom: 10px;
}

#option-two-input-container {
    margin-bottom: 10px;
}

#option-one-input-container .col-sm-3,
#option-two-input-container .col-sm-3 {
    text-align: right;
    padding: 0 5px 0 15px;
}

.panel .panel-heading h5 {
    display: inline-block;
}

.panel .panel-heading button {
    float: right;
    margin-top: 3px;
}

.panel-heading {
    padding: 3px 10px;
}

.navbar {
    min-height: 52px;
    margin-bottom: 15px;
}

.nav .dropdown-toggle {
    height: 50px;
}

#registerButton {
    margin-top: 10px;
    width: 35%;
}

.remove-set-button {
    margin: 0 0 0 4px;
    height: 10px;
}

.remove-workout-button,
.edit-workout-button {
    margin: 0 3px;
    padding: 7px;
}

#weight-or-dist-selector,
#reps-or-time-selector,
.bootstrap-select {
    margin: 2px 0;
    color: white;
    background-color: #272b30;
}

.sets-container {
    padding: 10px 10px 0px 10px;
}

.set-info-section {
    padding: 0;
}

.set-info-list-item {
    list-style-type: none;
}

.set-list {
    text-align: right;
    padding: 0 5px 0 0;
    margin: 0;
}

select option:first-child {
    color: grey;
    display: none;
}

#submit-set-info-button,
#cancel-set-info-button {
    margin-bottom: 5px;
}

#submit-set-info-button {
    width: 70%;
}

#title-container {
    opacity: 0;
    display: inline-block;
    -webkit-transition: .3s;
    -moz-transition: .3s;
    -o-transition: .3s;
    transition: .3s;
}

#title-container h1 {
    font-size: 40px;
    margin-top: 10px;
    margin-bottom: 8px;
}

.well {
    padding: 5px;
    margin-bottom: 10px;
}

.workout {
    width: 90%;
    max-width: 510px;
    margin: auto;
    margin-top: 10px;
    margin-bottom: 10px;
}

@media screen and (min-width: 300px) and (max-width: 450px) {
    .modal {
        width: 90%;
        margin: auto;
    }
    #title-container h1 {
        font-size: 29px;
    }
}

@media screen and (max-width: 767px) {
    .bootstrap-select.btn-group .btn .caret {
        left: 7px;
    }
    .bootstrap-select.btn-group .btn {
        padding: 8px 12px 8px 18px;
    }
    .bootstrap-select.form-control:not([class*=col-]) {
        width: 80px;
    }
    #exercise-input-container div[class*=col-] {
        text-align: center;
    }
    #exercise-name-input {
        margin: auto;
    }
    .modal-body label {
        display: none;
    }
    .modal-dialog {
        max-width: 350px;
        margin: auto;
    }
    #option-one-input-container .col-xs-8,
    #option-two-input-container .col-xs-8 {
        padding: 0;
    }
    #weight-or-dist-input,
    #reps-or-time-input {
        max-width: 205px;
    }
}

